<?xml version="1.0"?>
<package format="2">
  <name>platform_tx</name>
  <version>0.0.0</version>
  <description>The platform_tx package</description>

  <maintainer email="whiteherb@todo.todo">whiteherb</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>serial</build_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>serial</exec_depend>

  <export>

  </export>
</package>
